# automotive-message-broker

./: CMakeLists.txt  config
ambd/: core.cpp
lib/: CMakeLists.txt  abstractpropertytype.h  timestamp.cpp
lib/client/: CMakeLists.txt  amb-client.pc.in  ambd-client.pc.in  libamb-client.c  libamb-client.cpp  libamb-client.h  libamb-common.h  libamb-objects.h  libamb-util.c  libamb-util.h  libdbus-client.c  libsamsung-can.h
lib/client/test/: Makefile  test.c
plugins/: CMakeLists.txt
plugins/common/: dbusplugin.cpp
plugins/ethernet/: CMakeLists.txt  ethernetplugin.cpp  ethernetplugin.h
plugins/samsungcan_plugin/: CMakeLists.txt  config_samsung_can  samsungcan.in.json  samsungcan_cansignal.cpp  samsungcan_cansignal.h  samsungcan_cansignals.h  samsungcan_plugin.cpp  samsungcan_plugin.h  samsungcan_plugin.idl  samsungcan_plugin_addon.cpp  test_howto
plugins/samsungcan_plugin/dbc/: test_01.dbc  test_02.dbc  test_03.dbc  test_04.dbc  test_05.dbc  test_06.dbc
plugins/updatesink/: CMakeLists.txt  config_updatesink  updatesink.cpp  updatesink.h
plugins/updatesink2/: CMakeLists.txt  updatesink2.cpp  updatesink2.h
tools/bash_script/: Makefile  perf_amb.c  update_can.sh
tools/dbus_test/: Makefile  daemon.c  listen.c  update_can.sh
tools/domain_socket/: Makefile  config_domain_socket  gio_client.c
tools/libtest/: Makefile  libamb-client.c  test_gio.c
tools/libtest2/: Makefile  libamb-client.cpp  libamb-client.h  test.cpp
tools/libtest3/: Makefile  libamb-client.c  libamb-client.h  libamb-util.h  libsamsung-can.c  libsamsung-can.h  test.c
tools/libtest4/: libamb-client.h  test.c
tools/libtest5/: libamb-client.c  libamb-client.h  test.c
tools/libtest6/: Makefile  libamb-client.c  libamb-client.h  libamb-util.c  libamb-util.h  test.c
tools/performance/: Makefile  get.c  get_gio.c  listen_gio.c
tools/socketcan_test/: Makefile  test.c
tools/writetest/: libamb-util.h  libsamsung-can.h  test.c
